# tytle

./: .gitignore  Cargo.toml  README.md  commands.md  tech-debt.md
examples/: buildings.tytle  factorial.tytle
src/: lib.rs
tests/: ast_typecheck_tests.rs  ast_walker_test.rs  bytecode_generator_tests.rs  cfg_builder_tests.rs  logos_lexer_test.rs  logos_parser_test.rs  pprint_ast_tests.rs  pretty_print_tests.rs  program_build_test.rs  (+11 more)
tytle_core/: Cargo.toml  tech-debt.md
tytle_core/src/: lib.rs
tytle_core/src/ast/: macros.rs
tytle_core/src/ast/expression/: binary_op.rs  expression.rs  expression_ast.rs  expression_type.rs  literal_expr.rs  pprint_ast.rs
tytle_core/src/ast/semantic/: ast_typecheck.rs  ast_walker.rs  ast_walker_error.rs  environment.rs  id_generator.rs  mod.rs  procedure.rs  scope.rs  symbol.rs  symbol_table.rs  symbol_table_generator.rs  variable.rs
tytle_core/src/ast/statement/: block_stmt.rs  command.rs  direction.rs  make_stmt.rs  mod.rs  procedure_stmt.rs  repeat_stmt.rs  return_stmt.rs
tytle_core/src/ir/: cfg_builder.rs  cfg_edge.rs  cfg_graph.rs  cfg_instruction.rs  cfg_node.rs  cfg_object.rs  macros.rs
tytle_core/src/lexer/: token.rs  tytle_lexer.rs
tytle_core/src/parser/: parse.rs  parse_error.rs  tytle_parser.rs
tytle_core/src/vm/: call_stack.rs  dummy_host.rs  host.rs  interpreter.rs  memory.rs  memory_value.rs  mod.rs  pen.rs
tytle_core/tests/: ast_typecheck_tests.rs  cfg_builder_tests.rs  interpreter_tests.rs  symbol_table_generator_tests.rs  symbol_table_tests.rs  tytle_lexer_test.rs  tytle_parser_tests.rs
(+129 files in other folders)
