[package]
name = "tytle"
version = "0.0.1"
publish = false
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
edition = "2018"
description = "The Typed-Turtle Programming Language"
repository = "https://github.com/spacemeshos/tytle"
license = "Apache-2.0"

[dependencies]
maplit = "1.0.1"
lazy_static = "1.2.0"
